<resources>
    <string name="app_name" translatable="false">AndroidRunTimePermission</string>
    <string name="permission_required" translatable="false">Please provide permission for camera.</string>
    <string name="permission_required_location" translatable="false">Please provide permission for location.</string>
    <string name="ok" translatable="false">OK</string>
    <string name="permission_granted" translatable="false">Permission is granted.</string>
    <string name="accept" translatable="false">ACCEPT</string>
    <string name="cancel" translatable="false">DENY</string>
    <string name="title" translatable="false">Need Permissions</string>
    <string name="message" translatable="false">This app needs all permissions</string>
    <string name="unlock" translatable="false">UNLOCK</string>
    <string name="titleUnlock" translatable="false">Unlock</string>
    <string name="messageUnlock" translatable="false">You have to unlock to use the application</string>
    <string name="welcome">Welcome,</string>
    <string name="instructions">Please fill the following fields</string>
    <string name="email">Email</string>
    <string name="firstName">First Name</string>
    <string name="lasttName">Last Name</string>
    <string name="phoneNo">Phone Number</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="firstNameValidation">Please enter your first name</string>
    <string name="lastNameValidation">Please enter your last name</string>
    <string name="phoneNumberEmptyValidation">Please enter your phone number</string>
    <string name="phoneNumberValidation">Please enter correct phone number</string>
    <string name="addressValidation">Please enter your address</string>
    <string name="emailBlankValidation">Email should not be left blank</string>
    <string name="emailFormatValidation">Invalid Email format</string>
    <string name="passwordBlankValidation">Password should not be left blank</string>
    <string name="passwordFormatValidation">Password should not be less than 8 characters</string>
    <string name="passwordMatchingValidation">Password not matched</string>
    <string name="loginSucess">Successfully Logged in</string>
    <string name="validationSucess">All form fields are validated</string>
    <string name="btnSignIn">Sign In</string>
    <string name="btnSave">Save</string>
    <string name="Bengali" translatable="false">বাংলা</string>
    <string name="language">Language</string>
</resources>